--- a/html/Student/student.html
+++ b/html/Student/student.html
@@ -1,57 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Student</title>
-  </head>
-  <body>
-    <header class="">
-      <nav class="navbar navbar-expand-sm bg-light navbar-light">
-        <ul class="navbar-nav">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Student</title>
+</head>
+
+<body class="body">
+  <header class="">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">QuizOnline</a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">History</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
+          <li class="nav-item ml-5">
+            <span class="text-danger">Welcome,A Linh</span>
           </li>
         </ul>
-      </nav>
+        <div>
+          <button class="btn btn-outline-secondary" type="submit">
+            Log Out
+          </button>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <div class="bgcolor">
+    <div class="container">
+      <h3 class="p-5">Select subjects you want quiz !</h3>
+      <div class="row show_subjects">
+        <div class="col-md-3 ">
+          <div class="box_subject">
+            <h4 class="box_subject_title">Subjects name</h4>
+            <span class="box_subject_conten">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad quis saepe
+            </span>
+            <button type="button" class="btn btn-primary m-2">Learn More</button>
+          </div>
+        </div>
+        <div class="col-md-3 ">
+          <div class="box_subject">
+            <h4 class="box_subject_title">Subjects name</h4>
+            <span class="box_subject_conten">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad quis saepe
+            </span>
+            <button type="button" class="btn btn-primary m-2">Learn More</button>
+          </div>
+        </div>
+        <div class="col-md-3 ">
+          <div class="box_subject">
+            <h4 class="box_subject_title">Subjects name</h4>
+            <span class="box_subject_conten">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad quis saepe
+            </span>
+            <button type="button" class="btn btn-primary m-2">Learn More</button>
+          </div>
+        </div>
+        <div class="col-md-3 ">
+          <div class="box_subject">
+            <h4 class="box_subject_title">Subjects name</h4>
+            <span class="box_subject_conten">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad quis saepe
+            </span>
+            <button type="button" class="btn btn-primary m-2">Learn More</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
+</body>
 
-      <!-- Black with white text -->
-      <nav class="navbar navbar-expand-sm bg-dark navbar-dark">...</nav>
-
-      <!-- Blue with white text -->
-      <nav class="navbar navbar-expand-sm bg-primary navbar-dark">...</nav>
-    </header>
-    <div class="container"></div>
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-      crossorigin="anonymous"
-    ></script>
-  </body>
 </html>
