--- a/html/Student/admin.html
+++ b/html/Student/admin.html
@@ -36,66 +36,73 @@
     </header>
     <div class="bgcolor">
         <div class="container">
-            <h3 class="p-5">Input Question :</h3>
-            <form>
-                <div class="form-group">
-                    <label>Question Content:</label>
-                    <textarea class="form-control" rows="3"></textarea>
-                </div>
-                <label>Answer:</label>
+            <h1 class="p-5">Search Page</h1>
+            <form class="example" action="MainController">
                 <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">A</span>
+                    <input type="text" class="form-control" name="txtSearchQuestion" placeholder="Search Question">
+                    <div class="input-group-append">
+                        <button class="btn btn-success" type="submit" value="Search" name="action">Search</button>
                     </div>
-                    <input type="text" class="form-control">
                 </div>
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">B</span>
-                    </div>
-                    <input type=" text" class="form-control">
-                </div>
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">C</span>
-                    </div>
-                    <input type=" text" class="form-control">
-                </div>
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">D</span>
-                    </div>
-                    <input type=" text" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label>Subject:</label>
-                    <select class="form-control">
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
-                    </select>
-                </div>
-                <label>Select Correct answer:</label><br />
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" value="option1">
-                    <label class="form-check-label">A</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" value="option2">
-                    <label class="form-check-label">B</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" value="option2">
-                    <label class="form-check-label">C</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" value="option2">
-                    <label class="form-check-label">D</label>
-                </div><br />
-                <button type="button" class="btn btn-success mt-3">Input Question</button>
             </form>
+            <div class="col-sm-12 pt-2">
+                <div class="card">
+                    <div class="card-body">
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                        </p>
+                        <label>Select your answer:</label><br />
+                        <div class="form-check ">
+                            <input class="form-check-input" type="radio" name="txtCorrectAnswer" value="optionA">
+                            <label class="">A. </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="txtCorrectAnswer" value="optionB">
+                            <label>B. </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="txtCorrectAnswer" value="optionC">
+                            <label>C. </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="txtCorrectAnswer" value="optionD">
+                            <label>D. </label>
+                        </div>
+                        <button type="submit" class="btn btn-success mt-3" name="action" value="InpustQuestion">
+                            Update</button>
+                        <button type="submit" class="btn btn-danger mt-3" name="action" value="InpustQuestion">
+                            Delete</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 pt-2">
+                <div class="card">
+                    <div class="card-body">
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                        </p>
+                        <label>Select your answer:</label><br />
+                        <div class="form-check ">
+                            <input class="form-check-input" type="radio" name="txtCorrectAnswer" value="optionA">
+                            <label class="">A. </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="txtCorrectAnswer" value="optionB">
+                            <label>B. </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="txtCorrectAnswer" value="optionC">
+                            <label>C. </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="txtCorrectAnswer" value="optionD">
+                            <label>D. </label>
+                        </div>
+                        <button type="submit" class="btn btn-success mt-3" name="action" value="InpustQuestion">
+                            Update</button>
+                        <button type="submit" class="btn btn-danger mt-3" name="action" value="InpustQuestion">
+                            Delete</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
