--- a/html/Student/admin.html
+++ b/html/Student/admin.html
@@ -44,6 +44,20 @@
                         <button class="btn btn-success" type="submit" value="Search" name="action">Search</button>
                     </div>
                 </div>
+                <div class="row col-md-5">
+                    <div class="form-group col">
+                        <label>Select subject :</label>
+                        <select class="form-control">
+                            <option>1</option>
+                        </select>
+                    </div>
+                    <div class="form-group col">
+                        <label>Select status question :</label>
+                        <select class="form-control">
+                            <option>1</option>
+                        </select>
+                    </div>
+                </div>
             </form>
             <div class="col-sm-12 pt-2">
                 <div class="card">
